# misc

data/: 2024.yaml  birds.yaml  subscriptions.opml
dotfiles/: .ghci  .gitconfig
experiments/haskell/: experiments.cabal  stack.yaml
experiments/haskell/src/: Experiments.hs
experiments/html/: index.html
experiments/latex/: letter.tex  shell.nix
experiments/nix/: shell.nix
templates/latex/: letter.tex
