cabal-version: 3.12

name: experiments
version: 0.1.0.0

common common
  build-depends:
    , base >= 4.19
    , bytestring
    , containers
    , directory
    , mtl
    , parsec
    , text
    , time
    , transformers
  default-language:
    Haskell2010
  ghc-options:
    -Wall

library
  import:
    , common
  hs-source-dirs:
    src
  exposed-modules:
    Experiments
  build-depends:
    , random
